--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="строительство домов">
+    <meta name="yandex-verification" content="6b9f899dd6b0d0b6" />
     <link rel="shortcut icon" href="./img/favicons.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/fonts.css">
