--- a/intel/index.html
+++ b/intel/index.html
@@ -226,8 +226,8 @@
         </section>
         <section class="products">
             <div class="deco">
-                <div class="deco__big deco_light"></div>
-                <div class="deco__small deco_white"></div>
+                <div class="deco__big deco_grey"></div>
+                <div class="deco__small deco_light"></div>
             </div>
             <div class="container">
                 <div class="products__wrap">
@@ -239,12 +239,12 @@
                         <div class="product__body">
                             <a href="#" class="product__title">Процессор Intel® Core™ i3-1115G4 (6 МБ кэш-памяти, до 4,10 ГГц)</a>
                             <ul class="product__list">
-                                <li>6 MB Intel® Smart Cache Кэш-память</li>
-                                <li>2 Ядра/Ядер</li>
-                                <li>4 Потока/Потоков</li>
-                                <li>4.10 GHz Максимальная тактовая частота в режиме Turbo</li>
-                                <li>G - Includes discrete graphics on package</li>
-                                <li>11th Generation</li>
+                                <li><span>6 MB Intel® Smart Cache Кэш-память</span></li>
+                                <li><span>2 Ядра/Ядер</span></li>
+                                <li><span>4 Потока/Потоков</span></li>
+                                <li><span>4.10 GHz Максимальная тактовая частота в режиме Turbo</span></li>
+                                <li><span>G - Includes discrete graphics on package</span></li>
+                                <li><span>11th Generation</span></li>
                             </ul>
                             <a href="#" target="_blank" class="button button_product">Купить</a>
                         </div>
@@ -257,12 +257,12 @@
                         <div class="product__body">
                             <a href="#" class="product__title">Процессор Intel® Core™ i5-1130G7 (8 МБ кэш-памяти, до 4,00 ГГц)</a>
                             <ul class="product__list">
-                                <li>8 MB Intel® Smart Cache Кэш-память</li>
-                                <li>4 Ядра/Ядер</li>
-                                <li>8 Потока/Потоков</li>
-                                <li>4.00 GHz Максимальная тактовая частота в режиме Turbo</li>
-                                <li>G - Includes discrete graphics on package</li>
-                                <li>11th Generation</li>
+                                <li><span>8 MB Intel® Smart Cache Кэш-память</span></li>
+                                <li><span>4 Ядра/Ядер</span></li>
+                                <li><span>8 Потока/Потоков</span></li>
+                                <li><span>4.00 GHz Максимальная тактовая частота в режиме Turbo</span></li>
+                                <li><span>G - Includes discrete graphics on package</span></li>
+                                <li><span>11th Generation</span></li>
                             </ul>
                             <a href="#" target="_blank" class="button button_product">Купить</a>
                         </div>
@@ -275,12 +275,12 @@
                         <div class="product__body">
                             <a href="#" class="product__title">Процессор Intel® Core™ i7-1160G7 (12 МБ кэш-памяти, до 4,40 ГГц)</a>
                             <ul class="product__list">
-                                <li>12 MB Intel® Smart Cache Кэш-память</li>
-                                <li>4 Ядра/Ядер</li>
-                                <li>8 Потока/Потоков</li>
-                                <li>4.40 GHz Максимальная тактовая частота в режиме Turbo</li>
-                                <li>G - Includes discrete graphics on package</li>
-                                <li>11th Generation</li>
+                                <li><span>12 MB Intel® Smart Cache Кэш-память</span></li>
+                                <li><span>4 Ядра/Ядер</span></li>
+                                <li><span>8 Потока/Потоков</span></li>
+                                <li><span>4.40 GHz Максимальная тактовая частота в режиме Turbo</span></li>
+                                <li><span>G - Includes discrete graphics on package</span></li>
+                                <li><span>11th Generation</span></li>
                             </ul>
                             <a href="#" target="_blank" class="button button_product">Купить</a>
                         </div>
@@ -303,21 +303,13 @@
             </div>
         </section>
         <section class="about">
-            <div class="deco">
-                <div class="deco__big deco_grey"></div>
-                <div class="deco__small deco_light"></div>
-            </div>
-            <div class="deco">
-                <div class="deco__small deco_grey"></div>
-                <div class="deco__big deco_light"></div>
-            </div>
-            <div class="deco">
-                <div class="deco__big deco_grey"></div>
-                <div class="deco__small deco_light"></div>
-            </div>
             <div class="container">
                 <div class="about__wrap">
                     <article class="about__item">
+                        <div class="deco">
+                            <div class="deco__big deco_grey"></div>
+                            <div class="deco__small deco_light"></div>
+                        </div>
                         <picture loading="lazy" class="about__big-img">
                             <source srcset="./img/about_1.webp" type="image/webp">
                             <img src="./img/about_1.jpg" alt="Фото о нас">
@@ -334,6 +326,10 @@
                         </ul>
                     </article>
                     <article class="about__item">
+                        <div class="deco">
+                            <div class="deco__big deco_grey"></div>
+                            <div class="deco__small deco_light"></div>
+                        </div>
                         <h3 class="about__title">Концепция</h3>
                         <picture loading="lazy" class="about__img">
                             <source srcset="./img/about_2.webp" type="image/webp">
@@ -344,6 +340,10 @@
                         </div>
                     </article>
                     <article class="about__item">
+                        <div class="deco">
+                            <div class="deco__small deco_grey"></div>
+                            <div class="deco__big deco_light"></div>
+                        </div>
                         <h3 class="about__title">Миссия</h3>
                         <picture loading="lazy" class="about__img">
                             <source srcset="./img/about_3.webp" type="image/webp">
@@ -352,7 +352,6 @@
                         <div class="about__body about_grey">
                             <p class="about__text">Мы разрабатываем решения для преодоления самых серьезных вызовов, стоящих перед нашими клиентами, с помощью надежных вычислительных технологий от облака до периферии, основанных на законе Мура.</p>
                         </div>
-
                     </article>
                 </div>
             </div>
