--- a/intel/index.html
+++ b/intel/index.html
@@ -14,11 +14,11 @@
     <header class="header">
         <div class="container">
             <div class="header__intel">
-                <img src="./img/intel_light.png" alt="Логотип Intel">
+                <img loading="lazy" src="./img/intel_light.png" alt="Логотип Intel">
             </div>
             <div class="header__wrap">
                 <div class="logo">
-                    <img src="./img/ixbt-logo.png" alt="Логотип IXBT" class="logo__img">
+                    <img loading="lazy" src="./img/ixbt-logo.png" alt="Логотип IXBT" class="logo__img">
                 </div>
                 <nav class="nav">
                     <ul class="nav__list">
@@ -46,9 +46,9 @@
                 <div class="deco__small deco_white"></div>
                 <div class="deco__big deco_dark"></div>
             </div>
-            <picture loading="lazy" class="banner__bg">
+            <picture class="banner__bg">
                 <source srcset="./img/banner_bg.webp" type="image/webp">
-                <img src="./img/banner_bg.jpg" alt="Фон">
+                <img loading="lazy" src="./img/banner_bg.jpg" alt="Фон">
             </picture>
             <div class="container">
                 <div class="banner__body">
@@ -62,30 +62,30 @@
             <div class="container">
                 <div class="three-col__container">
                     <article class="announce">
-                        <picture loading="lazy" class="announce__img">
+                        <picture class="announce__img">
                             <source srcset="./img/announce_1.webp" type="image/webp">
-                            <img src="./img/announce_1.jpg" alt="Анонс">
+                            <img loading="lazy" src="./img/announce_1.jpg" alt="Анонс">
                         </picture>
                         <div class="announce__body">
-                            <a href="#" class="announce__link" target="_blank">Процессоры Intel® Core™ 11-го поколения  — революция</a>
+                            <h3><a href="#" class="announce__link" target="_blank">Процессоры Intel® Core™ 11-го поколения  — революция</a></h3>
                         </div>
                     </article>
                     <article class="announce">
-                        <picture loading="lazy" class="announce__img">
+                        <picture class="announce__img">
                             <source srcset="./img/announce_2.webp" type="image/webp">
-                            <img src="./img/announce_2.jpg" alt="Анонс">
+                            <img loading="lazy" src="./img/announce_2.jpg" alt="Анонс">
                         </picture>
                         <div class="announce__body">
-                            <a href="#" class="announce__link" target="_blank">Project Athena: новый подход к инновациям</a>
+                            <h3><a href="#" class="announce__link" target="_blank">Project Athena: новый подход к инновациям</a></h3>
                         </div>
                     </article>
                     <article class="announce">
-                        <picture loading="lazy" class="announce__img">
+                        <picture class="announce__img">
                             <source srcset="./img/announce_3.webp" type="image/webp">
-                            <img src="./img/announce_3.jpg" alt="Анонс">
+                            <img loading="lazy" src="./img/announce_3.jpg" alt="Анонс">
                         </picture>
                         <div class="announce__body">
-                            <a href="#" class="announce__link" target="_blank">Подробнее о графике Intel® Iris® Xe</a>
+                            <h3><a href="#" class="announce__link" target="_blank">Подробнее о графике Intel® Iris® Xe</a></h3>
                         </div>
                     </article>
                 </div>
@@ -109,9 +109,9 @@
                 </div>
                 <div class="tests__wrap">
                     <div class="test">
-                        <picture loading="lazy" class="test__img">
+                        <picture class="test__img">
                             <source srcset="./img/test_1.webp" type="image/webp">
-                            <img src="./img/test_1.png" alt="Линейка современных процесоров">
+                            <img loading="lazy" src="./img/test_1.png" alt="Линейка современных процесоров">
                         </picture>
                         <h3 class="test__title">Тестируем процессоры Intel Core i5-9600K, i7-9700K, i9-9900K, i9-9900KF и i9-9900KS по новой методике 2020 года</h3>
                         <ul class="test__list">
@@ -126,9 +126,9 @@
                         <a href="#" class="button button_navy">К тестированию</a>
                     </div>
                     <div class="test">
-                        <picture loading="lazy" class="test__img">
+                        <picture class="test__img">
                             <source srcset="./img/test_2.webp" type="image/webp">
-                            <img src="./img/test_2.webp" alt="Линейка современных процесоров">
+                            <img loading="lazy" src="./img/test_2.webp" alt="Линейка современных процесоров">
                         </picture>
                         <h3 class="test__title">Тестирование процессоров Intel Core i5-10600K и Core i9-10900K для новой платформы LGA1200</h3>
                         <ul class="test__list">
@@ -152,9 +152,9 @@
                 <div class="deco__big deco_grey"></div>
                 <div class="deco__small deco_light"></div>
             </div>
-            <picture loading="lazy" class="horizons__bg">
+            <picture class="horizons__bg">
                 <source srcset="./img/horizons_bg.webp" type="image/webp">
-                <img src="./img/horizons_bg.jpg" alt="Фон">
+                <img loading="lazy" src="./img/horizons_bg.jpg" alt="Фон">
             </picture>
             <div class="container">
                 <div class="horizons__body">
@@ -171,32 +171,32 @@
             <div class="container">
                 <div class="three-col__container">
                     <a href="#" class="article" target="_blank">
-                        <picture loading="lazy" class="article__img">
+                        <picture class="article__img">
                             <source srcset="./img/article_1.webp" type="image/webp">
-                            <img src="./img/article_1.jpg" alt="Фото статьи">
+                            <img loading="lazy" src="./img/article_1.jpg" alt="Фото статьи">
                         </picture>
                         <div class="article__body">
-                            <span href="#" class="article__title">Разгон процессора через BIOS</span>
+                            <h3 class="article__title">Разгон процессора через BIOS</h3>
                             <p class="article__text">Это пошаговое руководство покажет вам, как разогнать процессор с помощью BIOS.</p>
                         </div>
                     </a>
                     <a href="#" class="article" target="_blank">
-                        <picture loading="lazy" class="article__img">
+                        <picture class="article__img">
                             <source srcset="./img/article_2.webp" type="image/webp">
-                            <img src="./img/article_2.jpg" alt="Фото статьи">
+                            <img loading="lazy" src="./img/article_2.jpg" alt="Фото статьи">
                         </picture>
                         <div class="article__body">
-                            <span href="#" class="article__title">Как выполнить оверклокинг оперативной памяти</span>
+                            <h3 class="article__title">Как выполнить оверклокинг оперативной памяти</h3>
                             <p class="article__text">Оверклокинг оперативной памяти помогает увеличить частоту памяти и повысить производительность вашего ПК.</p>
                         </div>
                     </a>
                     <a href="#" class="article" target="_blank">
-                        <picture loading="lazy" class="article__img">
+                        <picture class="article__img">
                             <source srcset="./img/article_3.webp" type="image/webp">
-                            <img src="./img/article_3.jpg" alt="Фото статьи">
+                            <img loading="lazy" src="./img/article_3.jpg" alt="Фото статьи">
                         </picture>
                         <div class="article__body">
-                            <span href="#" class="article__title">Охлаждение ПК: важность эффективного охлаждения ПК</span>
+                            <h3 class="article__title">Охлаждение ПК: важность эффективного охлаждения ПК</h3>
                             <p class="article__text">Узнайте, как высокая температура ухудшает работу вашего ПК и какие системы охлаждения помогут с этим справиться.</p>
                         </div>
                     </a>
@@ -207,9 +207,9 @@
             </div>
         </section>
         <section id="products" class="small">
-            <picture loading="lazy" class="small__bg">
+            <picture class="small__bg">
                 <source srcset="./img/small_1.webp" type="image/webp">
-                <img src="./img/small_1.jpg" alt="Фон">
+                <img loading="lazy" src="./img/small_1.jpg" alt="Фон">
             </picture>
             <div class="container">
                 <div class="section__center">
@@ -232,12 +232,12 @@
             <div class="container">
                 <div class="products__wrap">
                     <article class="product">
-                        <picture loading="lazy" class="product__img">
+                        <picture class="product__img">
                             <source srcset="./img/product_1.webp" type="image/webp">
-                            <img src="./img/product_1.jpg" alt="Процессор">
+                            <img loading="lazy" src="./img/product_1.jpg" alt="Процессор">
                         </picture>
                         <div class="product__body">
-                            <a href="#" class="product__title">Процессор Intel® Core™ i3-1115G4 (6 МБ кэш-памяти, до 4,10 ГГц)</a>
+                            <h3><a href="#" class="product__title">Процессор Intel® Core™ i3-1115G4 (6 МБ кэш-памяти, до 4,10 ГГц)</a></h3>
                             <ul class="product__list">
                                 <li><span>6 MB Intel® Smart Cache Кэш-память</span></li>
                                 <li><span>2 Ядра/Ядер</span></li>
@@ -250,12 +250,12 @@
                         </div>
                     </article>
                     <article class="product">
-                        <picture loading="lazy" class="product__img">
+                        <picture class="product__img">
                             <source srcset="./img/product_2.webp" type="image/webp">
-                            <img src="./img/product_2.jpg" alt="Процессор">
+                            <img loading="lazy" src="./img/product_2.jpg" alt="Процессор">
                         </picture>
                         <div class="product__body">
-                            <a href="#" class="product__title">Процессор Intel® Core™ i5-1130G7 (8 МБ кэш-памяти, до 4,00 ГГц)</a>
+                            <h3><a href="#" class="product__title">Процессор Intel® Core™ i5-1130G7 (8 МБ кэш-памяти, до 4,00 ГГц)</a></h3>
                             <ul class="product__list">
                                 <li><span>8 MB Intel® Smart Cache Кэш-память</span></li>
                                 <li><span>4 Ядра/Ядер</span></li>
@@ -268,12 +268,12 @@
                         </div>
                     </article>
                     <article class="product">
-                        <picture loading="lazy" class="product__img">
+                        <picture class="product__img">
                             <source srcset="./img/product_3.webp" type="image/webp">
-                            <img src="./img/product_3.jpg" alt="Процессор">
+                            <img loading="lazy" src="./img/product_3.jpg" alt="Процессор">
                         </picture>
                         <div class="product__body">
-                            <a href="#" class="product__title">Процессор Intel® Core™ i7-1160G7 (12 МБ кэш-памяти, до 4,40 ГГц)</a>
+                            <h3><a href="#" class="product__title">Процессор Intel® Core™ i7-1160G7 (12 МБ кэш-памяти, до 4,40 ГГц)</a></h3>
                             <ul class="product__list">
                                 <li><span>12 MB Intel® Smart Cache Кэш-память</span></li>
                                 <li><span>4 Ядра/Ядер</span></li>
@@ -292,9 +292,9 @@
             </div>
         </section>
         <section id="about" class="small">
-            <picture loading="lazy" class="small__bg">
+            <picture class="small__bg">
                 <source srcset="./img/small_2.webp" type="image/webp">
-                <img src="./img/small_2.jpg" alt="Фон">
+                <img loading="lazy" src="./img/small_2.jpg" alt="Фон">
             </picture>
             <div class="container">
                 <div class="section__center">
@@ -310,9 +310,9 @@
                             <div class="deco__big deco_grey"></div>
                             <div class="deco__small deco_light"></div>
                         </div>
-                        <picture loading="lazy" class="about__big-img">
+                        <picture class="about__big-img">
                             <source srcset="./img/about_1.webp" type="image/webp">
-                            <img src="./img/about_1.jpg" alt="Фото о нас">
+                            <img loading="lazy" src="./img/about_1.jpg" alt="Фото о нас">
                         </picture>
                     </article>
                     <article class="about__item about__item_nophoto about_grey">
@@ -331,9 +331,9 @@
                             <div class="deco__small deco_light"></div>
                         </div>
                         <h3 class="about__title">Концепция</h3>
-                        <picture loading="lazy" class="about__img">
+                        <picture class="about__img">
                             <source srcset="./img/about_2.webp" type="image/webp">
-                            <img src="./img/about_2.jpg" alt="Фото о нас">
+                            <img loading="lazy" src="./img/about_2.jpg" alt="Фото о нас">
                         </picture>
                         <div class="about__body about_grey">
                             <p class="about__text">Мы работаем над тем, чтобы стать безусловным лидером в отрасли и раскрывать потенциал данных.</p>
@@ -345,9 +345,9 @@
                             <div class="deco__big deco_light"></div>
                         </div>
                         <h3 class="about__title">Миссия</h3>
-                        <picture loading="lazy" class="about__img">
+                        <picture class="about__img">
                             <source srcset="./img/about_3.webp" type="image/webp">
-                            <img src="./img/about_3.jpg" alt="Фото о нас">
+                            <img loading="lazy" src="./img/about_3.jpg" alt="Фото о нас">
                         </picture>
                         <div class="about__body about_grey">
                             <p class="about__text">Мы разрабатываем решения для преодоления самых серьезных вызовов, стоящих перед нашими клиентами, с помощью надежных вычислительных технологий от облака до периферии, основанных на законе Мура.</p>
@@ -368,7 +368,7 @@
         </div>
         <div class="container">
             <div class="footer__wrap">
-                <img class="footer__logo" src="./img/intel_dark.png" alt="Лого Intel">
+                <img loading="lazy" class="footer__logo" src="./img/intel_dark.png" alt="Лого Intel">
                 <span class="footer__copyright">©Корпорация Intel  |  iXbt.com</span>
             </div>
         </div>
